# diffusion_rl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.claude/: settings.json
.github/: ISSUE_TEMPLATE.md
experiments/bs4_moons/: bs4_experiments_summary.md  optuna_amctl.db  optuna_amctl_bs4_sweep.py  optuna_amctl_bs4_sweep_results.json  optuna_amctl_confirm_results.json  optuna_amctl_top.json  optuna_confirm_and_converge.py  optuna_offpolicy.db  optuna_offpolicy_pipeline.py  optuna_offpolicy_top.json  optuna_onpolicy_sweep.py  optuna_other.db  optuna_other_confirm_results.json  optuna_other_onpolicy_pipeline.py  optuna_top_configs.json
experiments/common/: README.md  analytical_target.py  analytical_value_function.md  compute_analytical_value.py  plot_sweep_results.py  sanity_check_analytical_drift.py
experiments/data_quality/: README.md  data_quality.py  data_quality_v2.py  data_quality_v2_report.md  data_quality_v2_results_prev.json  dq2_clean_plots.py
experiments/misc/: README.md
notebooks/: alternating_training_exp.py  analytical_target.json  analytical_target.py  ancestral_training_sweep.py  batch_size_sweep.py  batch_size_sweep_report.md  batch_size_sweep_results.json  bs4_experiments_summary.md  bs_sweep.py  bs_sweep_balanced.py  bs_sweep_balanced_results.json  bs_sweep_results.json  compute_analytical_value.py  convergence_run.py  data_quality.py  data_quality_clean_report.md  data_quality_results.json  data_quality_v2.py  data_quality_v2_report.md  data_quality_v2_results.json  data_quality_writeup.py  diffusion_llm.ipynb  dimension_scaling.py  dq2_clean_plots.py  ema_experiment.py  eval_value_functions.py  fbrrt_adaptive_mix.py  fbrrt_alpha_sweep.py  fbrrt_grad_decay_sweep.py  fbrrt_lambda_accel.py  fbrrt_mixed_10pct.py  fbrrt_mixed_run.py  fbrrt_sweep.py  fbrrt_titrate.py  lambda_sweep_logz.py  lambda_training_results.json  lambda_training_sweep.py  long_run.py  loss_comparison.py  lr_sweep.py  (+59 more)
tests/: __init__.py  test_diffusion_rl.py  test_train_diff_llm.py
(+272 files in other folders)
